@@ -147,6 +147,8 @@ if [istarget sh*-*-*] then {
 
 	    run_dump_test "sh4a-dsp"
 	    run_dump_test "sh4al-dsp"
+
+	    run_dump_test "sh2a"
 	}
 
 	run_dump_test "pic"
@@ -160,7 +162,6 @@ if [istarget sh*-*-*] then {
 
 	# Test -renesas.
 	run_dump_test "renesas-1"
-	run_dump_test "sh2a"
     }
 }
 
