@@ -1,3 +1,8 @@
+2004-07-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* ld-sh/sh64/crange3-cmpct.rd: Update.
+	* ld-sh/sh64/crange3-media.rd: Update.
+
 2004-07-27  Nitin Yewale  <nitiny@kpitcummins.com>
 
 	* ld-h8300/h8300.exp: Addition of new test case to check
